--- a/style.css
+++ b/style.css
@@ -1,29 +1,54 @@
 body {
     margin: 0;
-    padding: 0;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    overflow: hidden;
 }
 
-.slide {
-    height: 100vh;
-    width: 100vw;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.window {
+    position: absolute;
+    height: 500px;
+    width: 700px;
+    top: 20%;
+    left: 32%;
+    border: 1px solid #000;
+    resize: both;
+    overflow: hidden;
+    border-radius: 10px;
 }
 
-.one {
-    background-color: red;
+.title-bar {
+    background-color: #333;
+    color: #fff;
+    padding: 5px;
+    cursor: move;
+    user-select: none;
 }
 
-.two {
-    background-color: aqua;
+.content {
+    padding: 10px;
+    background-color: black;
+    height: 100%;
+    color: white;
 }
 
-.three {
-    background-color: blueviolet;
+
+.close-btn,
+.minimize-btn,
+.maximize-btn {
+    background: none;
+    border: none;
+    color: #fff;
+    cursor: pointer;
+    float: right;
+    margin-right: 5px;
 }
 
-.four {
-    background-color: brown;
+.close-btn:hover,
+.minimize-btn:hover,
+.maximize-btn:hover {
+    background-color: #555;
+}
+/* ... */
+
+#barretache {
+    color: red;
 }
